# obsidian-tools

./: .editorconfig  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  auto_compose.py  main.py  pyproject.toml
tests/: test_auto_compose.py  test_main.py
tests/examples/: with_ideas.md
